--- a/peenar-test.html
+++ b/peenar-test.html
@@ -1,1 +1,19 @@
-Hallo das ist eine neue Datei
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Schiff</title>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@5.0.0/dist/aframe-event-set-component.min.js"></script>
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <a-scene cursor="rayOrigin: mouse">
+      <a-sky src="wasser.jpg" rotation="0 -180 0"></a-sky>
+      <a-entity id="snow-system"></a-entity>
+      <a-camera>
+        <a-cursor></a-cursor>
+      </a-camera>
+      
+    </a-scene>
+  </body>
+</html>
